# ChangeLog for games-arcade/late
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/late/ChangeLog,v 1.5 2004/12/21 14:12:11 josejx Exp $

  22 Dec 2004; Joseph Jezak <josejx@gentoo.org> late-0.1.0.ebuild:
  Marked ppc stable.

  03 Nov 2004; Joseph Jezak <josejx@gentoo.org> late-0.1.0.ebuild:
  Added ~ppc.

*late-0.1.0 (22 Aug 2003)

  22 Aug 2003; Michael Sterrett <msterret@gentoo.org> late-0.1.0.ebuild:
  initial commit
