@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/late
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/late/ChangeLog,v 1.5 2004/12/21 14:12:11 josejx Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/late/ChangeLog,v 1.6 2005/08/09 21:15:42 mr_bones_ Exp $
+
+  09 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org> late-0.1.0.ebuild:
+  clean up install; tidy
 
   22 Dec 2004; Joseph Jezak <josejx@gentoo.org> late-0.1.0.ebuild:
   Marked ppc stable.
